--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,4 +1,17 @@
-#{extends 'main.html' /}
-#{set title:'Home' /}
+#{extends 'main.html' /} #{set title:'Home' /}
 
-#{welcome /}
+<div
+	style="font-size: 40pt; width: 80%; height: 140pt; text-align: center; border: 1px solid black; margin: auto;">
+	${time}</div>
+
+<br>
+<div style="text-align: center;">
+
+	<div
+		style="font-size: 40pt; width: 40%; height: 140pt; text-align: center; border: 1px solid black; margin: auto; display: inline-block;">
+		Start Task</div>
+	<div
+		style="font-size: 40pt; width: 40%; height: 140pt; text-align: center; border: 1px solid black; margin: auto; display: inline-block;">
+		Finish Task</div>
+
+</div>
