--- a/app/views/Application/startProduction.html
+++ b/app/views/Application/startProduction.html
@@ -35,6 +35,25 @@
 
 <h3 class="block">Olá, ${worker.name}! Escolha a <strong class="brown">encomenda</strong> ou o <strong class="blue">produto</strong> em que esteve a trabalhar:</h3>
 
-<div class="tile">
-	<h3>Product1</h3>
-</div>
+<form method="POST" action="/production/set" id="test">
+	<input type="hidden" name="userID">
+	<input type="hidden" name="productID">
+	<input type="hidden" name="positionID">
+	<input type="hidden" name="time">
+	<input type="hidden" name="start">
+	<input type="hidden" name="quantity">
+	<input type="hidden" name="waste">
+	
+	<div class="tile">
+		<h3>Product1</h3>
+	</div>
+</form>
+
+<script>
+	$("#test").submit(function(e){
+		e.preventDefault();
+	});
+	$('.tile').click(function() {
+		  $('#test').submit();
+	});
+</script>
