--- a/app/views/Application/finishProduction.html
+++ b/app/views/Application/finishProduction.html
@@ -1,4 +1,4 @@
-#{extends 'main.html' /}
+#{extends 'production.html' /}
 #{set title:'Finish Production' /}
 #{set 'moreStyles'}
 	#{stylesheet 'production.css' /}
@@ -26,7 +26,3 @@
 			Confirmar</td>
 	</tr>
 </table>
-
-
-
-<h3 class="block">Por favor insira a quantidade que produziu (não inclua o desperdício):</h3>
